--- a/Semana 3/css/stylesheet.css
+++ b/Semana 3/css/stylesheet.css
@@ -2,7 +2,7 @@
 
 
 body {
-	font-family: 'Roboto slab', serif;
+	font-family: 'Roboto condensed', serif;
 	background-color: #efefef;
 padding-bottom: 20%;
 }
@@ -25,7 +25,7 @@ header{
 }
 
 h1{
-padding-top: 4%;
+padding-top: 2%;
 padding-bottom: 4%;
 color: #11195d;
 font-size: 1.4em;
@@ -70,7 +70,8 @@ ol, ul {
     -webkit-transform:translate(0%,-50%);
     -ms-transform:translate(0%,-50%);
     color:#FFFFFF;
-    font-family: 'Roboto slab', serif;
+    font-family:'Arapey', serif;
+    font-style: italic;
     display:none;
 }
 
