--- a/Semana 5/css/style.css
+++ b/Semana 5/css/style.css
@@ -9,7 +9,8 @@
 
 
 .column-right{ 
-  float: right; width: 37%; 
+  float: right; 
+  width: 37%; 
   padding-top: 32px;
 }
 
@@ -39,7 +40,7 @@
 }
 
 .maincontainer{
-    padding-left: 350px;
+  padding-left: 350px;
   padding-right: 350px;
   padding-top: 5px;
 
@@ -61,14 +62,14 @@ h2{
   font-weight: bold;
   font-size: 2.2em;
   padding-top: 75px;
-  padding-left: 75px;
+  padding-left: 80px;
 }
 
 h3{
   font-family: "Oswald", sans-serif;
   font-size: 1.7em;
   padding-top: 10px;
-  padding-left: 75px;
+  padding-left: 80px;
     color: #FF460D;
 
 }
