--- a/Semana 10/css/style.css
+++ b/Semana 10/css/style.css
@@ -11,6 +11,17 @@ body{
   margin-left: 40px;
 }
 
+input{
+    background: #f5f5f5;
+    width: 241px;
+    border: none;
+    padding: 8px;
+    margin: 4px 10px 10px 0;
+    border-radius: 3px;
+    }
+
+
+    
 .titulo img{
   height: 24px;
   float: right;
@@ -57,7 +68,7 @@ img:hover{
 }
 .titulo {
   height: 80px;
-  width: 57%;
+  width: 54%;
   display: inline-block;
   margin-top: 2%;
 
